Additional fixes, simplification for spacing around avatar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -149,17 +149,11 @@ a:hover, a:focus {
   min-height: 88vh;
 }
 
-.avatar a {
-  display: block;
+.site-back {
   color: var(--header-foreground-alternate);
-  line-height: 0
 }
 
-.avatar a:hover, .avatar a:focus {
-  color: var(--tint);
-}
-
-.single .avatar a::before {
+.site-back::before {
   position: absolute;
   width: 1.5rem;
   text-align: center;
@@ -167,13 +161,13 @@ a:hover, a:focus {
   border-radius: 0.75rem;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.4);
   content: "←";
-  line-height: 1.5;
 }
 
-.avatar img {
+.site-avatar {
   max-width: 5rem;
   height: 5rem;
   border-radius: 3rem;
+  display: block;
 }
 
 .site-name {
@@ -731,7 +725,7 @@ Literal.String.Single, Literal.String.Symbol */
 
 /* Adjusts header sizing on large width (desktop) */
 @media (min-width: 64em) {
-  .avatar img {
+  .site-avatar {
     max-width: 8rem;
     height: 8rem;
   }
